Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115756

Android: QLineEdit setText() from textEdited signal does not move cursor to the end

XMLWordPrintable

    • Android
    • be3b9b2ab (dev), 2aa619d3b (6.6), b9b26b2b3 (6.5), 09ede1995 (tqtc/lts-6.2), efa5140b1 (tqtc/lts-6.2)

      See https://github.com/martinburchell/qt-lineedit-test/blob/master/main.cpp

      This is an example of a QLineEdit with a textEdited callback that inserts a dash after every five characters typed.

      On my Samsung Galaxy tab A7, Android 12 the cursor doesn't get moved to after the dash. On all other platforms I've tried, it does.

      This works with Qt5.12

       

        For Gerrit Dashboard: QTBUG-115756
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            martinburchell Martin Burchell
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: