src/plugins/platforms/android/qandroidinputcontext.cpp
@@ -1202,21 +1202,13 @@ bool QAndroidInputContext::focusObjectStopComposing()
 
     m_composingCursor = -1;
 
-    {
-        // commit the composing test
-        QList<QInputMethodEvent::Attribute> attributes;
-        QInputMethodEvent event(QString(), attributes);
-        event.setCommitString(m_composingText);
-        sendInputMethodEvent(&event);
-    }
-    {
-        // Moving Qt's cursor to where the preedit cursor used to be
-        QList<QInputMethodEvent::Attribute> attributes;
-        attributes.append(
-                QInputMethodEvent::Attribute(QInputMethodEvent::Selection, localCursorPos, 0));
-        QInputMethodEvent event(QString(), attributes);
-        sendInputMethodEvent(&event);
-    }
+    // commit composing text and cursor position
+    QList<QInputMethodEvent::Attribute> attributes;
+    attributes.append(
+        QInputMethodEvent::Attribute(QInputMethodEvent::Selection, localCursorPos, 0));
+    QInputMethodEvent event(QString(), attributes);
+    event.setCommitString(m_composingText);
+    sendInputMethodEvent(&event);
 
     return true;
 }
